Add a method to ScanController that scans an image directly and then copies the relevant attributes of another image to it. When creating a new image in the image editor use this functionality.

BUG: 221918

svn path=/trunk/extragear/graphics/digikam/; revision=1096752